fix project setup

--- a/eBudgeting/src/main/resources/config/production.properties
+++ b/eBudgeting/src/main/resources/config/production.properties
@@ -1,5 +1,5 @@
-config.datasource.jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
-config.datasource.jdbc.username=ldd
-config.datasource.jdbc.password=ldd4admin
+config.datasource.jdbc.url=jdbc:oracle:thin:@202.57.191.203:1521:xe
+config.datasource.jdbc.username=afrpmt
+config.datasource.jdbc.password=afrpmt
 config.datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
 config.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
