--- a/eBudgeting/.project
+++ b/eBudgeting/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eBudgeting</name>
+	<name>orrafpm-eBudgeting</name>
 	<comment></comment>
 	<projects>
 	</projects>
