--- a/eBudgeting/pom.xml
+++ b/eBudgeting/pom.xml
@@ -4,10 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>biz.thaicom</groupId>
 	<artifactId>eBudgeting</artifactId>
-	<name>eBudgeting</name>
+	<name>orrafpm</name>
 	<packaging>war</packaging>
 	<version>0.0.1-BUILD-SNAPSHOT</version>
 	<properties>
+		<m2eclipse.wtp.contextRoot>orrafpm</m2eclipse.wtp.contextRoot>
 		<java-version>1.6</java-version>
 		<org.springframework-version>3.1.2.RELEASE</org.springframework-version>
 		<org.springframework.data-version>1.1.0.RELEASE</org.springframework.data-version>
@@ -319,6 +320,14 @@
 	    	<filter>src/main/resources/config/${env}.properties</filter>
 	    </filters>
         <plugins>
+        
+        	<plugin>
+			   <artifactId>maven-war-plugin</artifactId>
+			   <version>2.2</version>
+			   <configuration>
+			      <warName>orrafpm</warName>
+			   </configuration>
+			</plugin>
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.9</version>
