--- a/eBudgeting/src/main/webapp/WEB-INF/web.xml
+++ b/eBudgeting/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,20 @@
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
+  <filter>
+     <filter-name>hibernateFilter</filter-name>
+     <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+     <init-param>
+        <param-name>singleSession</param-name>
+		<param-value>true</param-value>
+     </init-param>
+  </filter>
+
+  <filter-mapping>
+          <filter-name>hibernateFilter</filter-name>
+          <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
