--- a/eBudgeting/.project
+++ b/eBudgeting/.project
@@ -42,10 +42,11 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.ebayopensource.vjet.core.nature</nature>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>com.quest.toadext.ToadextNature</nature>
+		<nature>org.ebayopensource.vjet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
