--- a/eBudgeting/src/main/webapp/WEB-INF/web.xml
+++ b/eBudgeting/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>ระบบบริหารจัดการโครงการ (PMS) - ${buildNumber}_${timestamp}</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/spring/root-context.xml</param-value>
@@ -30,7 +31,7 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <servlet>
-    <display-name>eBudgeting</display-name>
+    <display-name>springMVC-AppServlet</display-name>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
