--- a/eBudgeting/src/main/resources/config/production.properties
+++ b/eBudgeting/src/main/resources/config/production.properties
@@ -1,6 +1,6 @@
 
-config.datasource.jdbc.url=jdbc:oracle:thin:@202.57.191.203:1521:xe
-config.datasource.jdbc.username=afrpmt
-config.datasource.jdbc.password=afrpmt
+config.datasource.jdbc.url=jdbc:oracle:thin:@192.168.1.3:1521:gits
+config.datasource.jdbc.username=pms
+config.datasource.jdbc.password=pms
 config.datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
 config.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
