--- a/eBudgeting/src/main/resources/config/production.properties
+++ b/eBudgeting/src/main/resources/config/production.properties
@@ -4,3 +4,7 @@ config.datasource.jdbc.username=pms
 config.datasource.jdbc.password=pms
 config.datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
 config.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+config.hibernate.showSql=false
+
+config.logback.level=info
+config.logback.appender=fileout
