--- a/eBudgeting/src/main/resources/spring.properties
+++ b/eBudgeting/src/main/resources/spring.properties
@@ -10,7 +10,7 @@ datasource.jdbc.url=${config.datasource.jdbc.url}
 datasource.jdbc.username=${config.datasource.jdbc.username}
 datasource.jdbc.password=${config.datasource.jdbc.password}
 hibernate.dialect=${config.hibernate.dialect}
-
+hibernate.showSql=${config.hibernate.showSql}
 
 # Oracle for production
 #datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
