--- a/eBudgeting/pom.xml
+++ b/eBudgeting/pom.xml
@@ -26,7 +26,7 @@
 		<logback.version>1.0.6</logback.version>
 		<jodatime.hibernate.version>1.3</jodatime.hibernate.version>
     	<jodatime.version>2.1</jodatime.version>
-    	<hibernate.version>4.1.9.Final</hibernate.version>
+    	<hibernate.version>4.2.3.Final</hibernate.version>
     	<hibernate.jmx.version>3.5.6-Final</hibernate.jmx.version>
     	<hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
     	<hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
@@ -34,7 +34,8 @@
     	<org.apache.tiles-version>2.2.2</org.apache.tiles-version>
     	<commons.dbcp.version>1.4</commons.dbcp.version>
     	<apache.poi-version>3.8</apache.poi-version>
-    	<jackson-version>2.1.0</jackson-version>
+    	<jackson-version>2.2.3</jackson-version>
+    	<jackson-datatype-hibernate4-version>2.2.3</jackson-datatype-hibernate4-version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -168,6 +169,12 @@
 			<artifactId>jackson-databind</artifactId>
 		  	<version>${jackson-version}</version>
 		</dependency>
+		
+		<dependency>
+			  <groupId>com.fasterxml.jackson.datatype</groupId>
+			  <artifactId>jackson-datatype-hibernate4</artifactId>
+			  <version>${jackson-datatype-hibernate4-version}</version>
+		</dependency>  
 		  	
 		<!-- common-dbcp -->
 		<dependency>
@@ -311,6 +318,7 @@
 				<includes>
 					<include>spring.properties</include>
 					<include>messages.properties</include>
+					<include>logback.xml</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
