--- a/eBudgeting/src/main/webapp/WEB-INF/web.xml
+++ b/eBudgeting/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
   </filter>
   <filter>
      <filter-name>hibernateFilter</filter-name>
-     <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+      <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
      <init-param>
         <param-name>singleSession</param-name>
 		<param-value>true</param-value>
