--- a/eBudgeting/src/main/webapp/WEB-INF/web.xml
+++ b/eBudgeting/src/main/webapp/WEB-INF/web.xml
@@ -31,9 +31,9 @@
      <filter-name>hibernateFilter</filter-name>
       <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
      <init-param>
-        <param-name>singleSession</param-name>
-		<param-value>true</param-value>
-     </init-param>
+        <param-name>entityManagerFactoryBeanName</param-name>
+        <param-value>myEmf</param-value>
+	</init-param>
   </filter>
 
   <filter-mapping>
