--- a/eBudgeting/.project
+++ b/eBudgeting/.project
@@ -46,6 +46,7 @@
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>com.quest.toadext.ToadextNature</nature>
+		<nature>com.dell.toadext.ToadextNature</nature>
 		<nature>org.ebayopensource.vjet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
