-- update production server jdbc

--- a/eBudgeting/src/main/resources/config/production.properties
+++ b/eBudgeting/src/main/resources/config/production.properties
@@ -1,5 +1,5 @@
 
-config.datasource.jdbc.url=jdbc:oracle:thin:@192.168.1.3:1521:gits
+config.datasource.jdbc.url=jdbc:oracle:thin:@//exa-scan.rubber.co.th:1521/GITS
 config.datasource.jdbc.username=pms
 config.datasource.jdbc.password=pms
 config.datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
