--- a/eBudgeting/pom.xml
+++ b/eBudgeting/pom.xml
@@ -318,6 +318,13 @@
 			<!-- 
 			<scope>test</scope>
 			-->
+		</dependency>
+		
+		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bignumber</artifactId>
+		    <version>2.0.0</version>
 		</dependency>        
 	</dependencies>
     <build>
